<resources>
    <string name="app_name">YouCurse</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nome User</string>
    <string name="nav_header_subtitle">email@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="action_logout">Sair</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cursos">Cursos</string>
    <string name="menu_professores">Professores</string>
    <string name="menu_info">Sobre</string>
    <string name="form_cad">Cadastre-se</string>
    <string name="form_curso_desejado">Curso desejado: </string>
</resources>